src/objects/EnrollmentPlan__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <inlineHelpText>ENR: Initial Application
CCR: Combined Request for both Participant and Metrics Changes
MOD: Modeling Application that allows performance projections
PAY: Payment Request Application, the final stage in an active app lifecycle</inlineHelpText>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>ENR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Exceptions__c</fullName>
        <description>/resource/1429552689000/ExclamationMark</description>
        <formula>CASE(EnrollmentStatus__c, &quot;Enrolled&quot;, NULL, &quot;Archived&quot;, Null, &quot;Closed&quot;, Null,

CASE(ApplicationType__c,&quot;OPT&quot;,NULL,&quot;Pay&quot;, NULL,
IF(  AND( TEXT(ApplicationType__c) = &quot;CCR&quot;, ParentApplication__r.IncentivePlan__c  &lt;&gt; IncentivePlan__c), 
      IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; CCR Incentive Plan does not match ENR Application Plan&quot; &amp; BR(), NULL)&amp;

IF(ApprovedNSRBudget__c &lt; IncentivePlan__r.MinNSRBudget__c,
      IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Project size of &quot; &amp; TEXT(ROUND(ApprovedNSRBudget__c,0)) &amp; &quot; is below the Plan Guidelines of &quot; &amp; TEXT(IncentivePlan__r.MinNSRBudget__c) &amp; BR(), NULL) &amp;

IF( AND( TEXT(ApplicationType__c) = &quot;ENR&quot;, PercentCompleteCostITD__c &gt; IncentivePlan__r.MaxComplete__c), 
      IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Percent Complete of &quot; &amp; TEXT(PercentCompleteCostITD__c*100) &amp; &quot;% is greater than Plan Guidelines of &quot; &amp; TEXT(IncentivePlan__r.MaxComplete__c*100)&amp;&quot;%&quot; &amp; BR(), NULL) &amp;

IF( TEXT( InterimPaymentRequested__c ) = &quot;Yes&quot; , 
      IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Interim Payment Requested&quot; &amp; BR(), NULL)&amp;


IF((TODAY()- ScheduledFinishDate__c &gt;= IncentivePlan__r.ScheduledEndDateNotLessThanDays__c * -1),
     IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Scheduled Finish Date Out Of Plan Guidelines&quot; &amp; BR(), NULL)&amp;

IF( AND(TEXT(ApplicationType__c) = &quot;ENR&quot;,TotalAllocationParticipants__c &gt; IncentivePlan__r.MaxAllocationPool__c), 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Participant Allocations Of &quot;&amp; 
TEXT(TotalAllocationParticipants__c*100) &amp; &quot;% Exceed Plan Guidelines Of &quot; &amp; 
TEXT(IncentivePlan__r.MaxAllocationPool__c*100) &amp; &quot;%&quot; &amp; BR(), NULL)

))</formula>
        <inlineHelpText>If exceptions are requested, enrollment will require 3rd level approval (typically Region Executive)</inlineHelpText>
        <label>Application Exceptions (All)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalRecentlyProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Recently Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovedContingencyBudgetVariance__c</fullName>
        <formula>ApprovedContingencyBudget__c - ApprovedContingencyBudgetatsnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Contingency Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedContingencyBudget__c</fullName>
        <description>Displays the budgeted Contingency, if any.  Budget reflects as sold plus change orders.</description>
        <formula>IncentiveProject__r.ApprovedContingencyBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the budgeted Contingency, if any.  Budget reflects as sold plus change orders.</inlineHelpText>
        <label>Contingency Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedContingencyBudgetatsnapshot__c</fullName>
        <label>Approved Contingency Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedCostBudgetVariance__c</fullName>
        <formula>ApprovedCostBudget__c -  ApprovedCostBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Cost Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedCostBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedCostBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Cost Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedCostBudgetatSnapshot__c</fullName>
        <label>Approved Cost Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDPEBudgetVariance__c</fullName>
        <formula>ApprovedDPEBudget__c -  ApprovedDPEBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved DPE Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDPEBudget__c</fullName>
        <description>Displays the budgeted DPE per AECOM Insight.  Direct Personnel Expense is the combination of Labor + Fringe.  Budget reflects as sold plus change orders.</description>
        <formula>IncentiveProject__r.ApprovedDPEBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the budgeted DPE per AECOM Insight.  Direct Personnel Expense is the combination of Labor + Fringe.  Budget reflects as sold plus change orders.</inlineHelpText>
        <label>Budgeted DPE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDPEBudgetatSnapshot__c</fullName>
        <description>Represents the DPE Budget of the project when the form was created or approved.</description>
        <inlineHelpText>Represents the DPE Budget of the project when the form was created or approved.</inlineHelpText>
        <label>Budgeted DPE at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLMatSnapshot__c</fullName>
        <label>Approved Direct LM at Snapshot</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborBudgetVariance__c</fullName>
        <formula>ApprovedDirectLaborBudget__c  -  ApprovedDirectLaborBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Direct Labor Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedDirectLaborBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Direct Labor Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborBudgetatSnapshot__c</fullName>
        <label>Approved DirectLabor Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborMultiplierVariance__c</fullName>
        <formula>ApprovedDirectLaborMultiplier__c -  ApprovedDirectLMatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Direct Labor MultiplierVariance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborMultiplier__c</fullName>
        <formula>IncentiveProject__r.ApprovedDirectLaborMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Direct Labor Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedFringeBudgetVariance__c</fullName>
        <formula>ApprovedFringeBudget__c -  ApprovedFringeBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Fringe Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedFringeBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedFringeBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Fringe Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedFringeBudgetatSnapshot__c</fullName>
        <label>Approved Fringe Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginBudgetVariance__c</fullName>
        <formula>IncentiveProject__r.ApprovedGrossMarginBudget__c -  ApprovedGrossMarginBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Gross Margin Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginBudget__c</fullName>
        <description>Dispalys the budgeted Gross Margin. Budget reflects as sold plus change orders.</description>
        <formula>IncentiveProject__r.ApprovedGrossMarginBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dispalys the budgeted Gross Margin. Budget reflects as sold plus change orders.</inlineHelpText>
        <label>Budgeted Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginBudgetatSnapshot__c</fullName>
        <description>Represents the Gross Margin Budget of the project when the form was created or approved.</description>
        <inlineHelpText>Represents the Gross Margin Budget of the project when the form was created or approved.</inlineHelpText>
        <label>Budgeted Gross Margin at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginofNSRVariance__c</fullName>
        <formula>ApprovedGrossMarginofNSR__c -  ApprovedGrossMarginofNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Gross Margin of NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginofNSR__c</fullName>
        <description>GM% of NSR = Gross Margin / Net Service Revenue</description>
        <formula>IncentiveProject__r.ApprovedGrossMarginofNSR__c</formula>
        <inlineHelpText>GM% of NSR = Gross Margin / Net Service Revenue</inlineHelpText>
        <label>Budgeted GM% of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginofNSRatSnapshot__c</fullName>
        <label>Approved GM of NSR at Snapshot</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedNSRBudgetVariance__c</fullName>
        <formula>ApprovedNSRBudget__c - ApprovedNSRBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved NSR Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNSRBudget__c</fullName>
        <description>Displays the budgeted Net Service Revenue (NSR).  Budget reflects as sold plus change orders.</description>
        <formula>IncentiveProject__r.ApprovedNSRBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the budgeted Net Service Revenue (NSR).  Budget reflects as sold plus change orders.</inlineHelpText>
        <label>Budgeted NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNSRBudgetatSnapshot__c</fullName>
        <description>Represents the NSR Budget of the project when the form was created.</description>
        <inlineHelpText>Represents the NSR Budget of the project when the form was created.</inlineHelpText>
        <label>Budgeted NSR at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginBudgetVariance__c</fullName>
        <formula>ApprovedNetMarginBudget__c -  ApprovedNetMarginBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Net Margin Budget Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedNetMarginBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Net Margin Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginBudgetatSnapshot__c</fullName>
        <label>Approved NM Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginofNSRVariance__c</fullName>
        <formula>ApprovedNetMarginofNSR__c -  ApprovedNetMarginofNSRatSnapShot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Net Margin of NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginofNSR__c</fullName>
        <formula>IncentiveProject__r.ApprovedNMofNSR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Net Margin of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginofNSRatSnapShot__c</fullName>
        <label>Approved NM of NSR at Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedODCBudgetVariance__c</fullName>
        <formula>ApprovedODCBudget__c - ApprovedODCBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved ODC Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedODCBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedODCBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved ODC Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedODCBudgetatSnapshot__c</fullName>
        <label>Approved ODC Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedOverheadBudgetVariance__c</fullName>
        <formula>ApprovedOverheadBudget__c -  ApprovedOverheadBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Overhead Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedOverheadBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedOverheadBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Overhead Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedOverheadBudgetatSnapshot__c</fullName>
        <label>Approved Overhead Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedRevenueBudgetVariance__c</fullName>
        <formula>ApprovedRevenueBudget__c - ApprovedRevenueBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Revenue Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedRevenueBudget__c</fullName>
        <description>Displays the budgeted Gross Revenue</description>
        <formula>IncentiveProject__r.ApprovedGrossRevenueBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the budgeted Gross Revenue</inlineHelpText>
        <label>Revenue Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedRevenueBudgetatSnapshot__c</fullName>
        <label>Approved Revenue Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSalaryCMatSnapshot__c</fullName>
        <description>Approved Salary Cost Multiplier at Inception</description>
        <label>Approved Salary CM at Snapshot</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedSalaryCostMultiplierVariance__c</fullName>
        <formula>ApprovedSalaryCostMultiplier__c -  ApprovedSalaryCMatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Salary Cost Multiplier Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedSalaryCostMultiplier__c</fullName>
        <formula>IncentiveProject__r.ApprovedSalaryCostMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Salary Cost Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsBudgetVariance__c</fullName>
        <formula>ApprovedSubsBudget__c - ApprovedSubsBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Subs Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsBudget__c</fullName>
        <formula>IncentiveProject__r.ApprovedSubsBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Subs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsBudgetatSnapshot__c</fullName>
        <label>Approved Subs Budget at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsODC__c</fullName>
        <formula>IncentiveProject__r.ApprovedODCBudget__c +  IncentiveProject__r.ApprovedSubsBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Subs and ODC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsODCatSnapshot__c</fullName>
        <formula>ApprovedSubsBudgetatSnapshot__c + ApprovedODCBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Subs/ODC at Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver1ID__c</fullName>
        <formula>Approver1__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver1ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver1Manager__c</fullName>
        <formula>Approver1__r.Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver 1 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver1Name__c</fullName>
        <description>Back-end field to capture text name to reduce the number of cross-object references in formulas.</description>
        <label>Approver 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2Approved__c</fullName>
        <label>Approver2 Approved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver2Name__c</fullName>
        <description>Back-end field to capture text name to reduce the number of cross-object references in formulas.</description>
        <label>Approver 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver2_ID__c</fullName>
        <formula>Approver2__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver2 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3ID__c</fullName>
        <formula>Approver3__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver3ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver3Name__c</fullName>
        <description>Back-end field to capture text name to reduce the number of cross-object references in formulas.</description>
        <label>Approver 3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 3 will be required only when the project contains an exception to current plan guidelines.  These exceptions will be acknowledged prior to submittal.</description>
        <inlineHelpText>Approver 3 will be required only when the project contains an exception to current plan guidelines.  These exceptions will be acknowledged prior to submittal.</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BaselineAlertVariance__c</fullName>
        <formula>IncentivePlan__r.VarianceAlert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BaselineAlertVariance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineContingency__c</fullName>
        <formula>IF(ISPICKVAL(IncentivePlan__r.ContractType__c,&apos;Fixed Price&apos;) ,IncentiveProject__r.ApprovedContingencyBudget__c,
	IF(OR(NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;)),Enrolled__c),
	  ApprovedContingencyBudgetatsnapshot__c,IncentiveProject__r.ApprovedContingencyBudget__c)) + ContingencyScopeChange__c +  ContingencyAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Contingency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineDPEVariance__c</fullName>
        <formula>BaselineDPE__c - BaselineDPEatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline DPE Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineDPE__c</fullName>
        <description>For the purposes of Deliver To Win only, displays budgeted amount inclusive of mgmt adjustments.   Baseline DPE = Budgeted DPE + DPE Adjustment.</description>
        <formula>IF(ISPICKVAL(IncentivePlan__r.ContractType__c,&apos;Fixed Price&apos;),
IncentiveProject__r.ApprovedDPEBudget__c,IF(OR(NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;)), Enrolled__c ),ApprovedDPEBudgetatSnapshot__c, IncentiveProject__r.ApprovedDPEBudget__c)) + DPEAdjustment__c + DPEBudgetScopeChange__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For the purposes of Deliver To Win only, displays budgeted amount inclusive of mgmt adjustments.   Baseline DPE = Budgeted DPE + DPE Adjustment.</inlineHelpText>
        <label>Baseline DPE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineDPEatSnapshot__c</fullName>
        <label>Baseline DPE at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGMofNSRVariance__c</fullName>
        <formula>BaselineGMofNSR__c - BaselineMarginofNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline GM% of NSR Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineGMofNSR__c</fullName>
        <description>For projects enrolled in the Fixed Price plan only, Baseline Margin% will change if Budgeted Margin% changes (and therefore Threshold Margin% and Threshold Margin will change)</description>
        <formula>BaselineMarginCalculated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For projects enrolled in the Fixed Price plan only, Baseline Margin% will change if Budgeted Margin% changes (and therefore Threshold Margin% and Threshold Margin will change)</inlineHelpText>
        <label>Baseline Margin % of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineGMofNSRatSnapshot__c</fullName>
        <label>Baseline GM% of NSR at Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineGrossMarginCaptured__c</fullName>
        <description>Used for workflow purposes only, to capture baseline gross margin for comparison</description>
        <label>Baseline Gross Margin Captured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGrossMarginVariance__c</fullName>
        <formula>BaselineGrossMargin__c - BaselineGrossMarginatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Gross Margin Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGrossMargin__c</fullName>
        <description>Used for purposes of Deliver To Win only.  Displays budgeted margin inclusive of mgmt adjustments, and represents expected margin for the project.</description>
        <formula>CASE(IncentivePlan__r.ContractSubType__c
	,&apos;Gross Margin&apos;
	,(
		IF(
			AND(ISPICKVAL(IncentivePlan__r.ContractType__c, &apos;Time &amp; Material&apos;),
			OR(NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;)),Enrolled__c))
			,ApprovedGrossMarginBudgetatSnapshot__c
			,IncentiveProject__r.ApprovedGrossMarginBudget__c
		)
			
	)
	,(
		IF(
			AND(ISPICKVAL(IncentivePlan__r.ContractType__c, &apos;Time &amp; Material&apos;),
			OR(NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;)),ISPICKVAL(EnrollmentStatus__c,&apos;Enrolled&apos;)))
			,ApprovedNetMarginBudgetatSnapshot__c
			,IncentiveProject__r.ApprovedNetMarginBudget__c
		)
	)
) + (GrossMarginAmountScopeChange__c + GrossMarginAmountAdjustment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for purposes of Deliver To Win only.  Displays budgeted margin inclusive of mgmt adjustments, and represents expected margin for the project.</inlineHelpText>
        <label>Baseline Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGrossMarginatSnapshot__c</fullName>
        <label>Baseline Gross Margin at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGrossRevenueSnapshot__c</fullName>
        <description>Will capture the full baseline revenue (Approved Baseline + Baseline adj + Baseline Scope)</description>
        <label>Baseline Gross Revenue Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineGrossRevenue__c</fullName>
        <formula>IF(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;),(CASE(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, IncentiveProject__r.ApprovedGrossRevenueBudget__c, &quot;Time &amp; Material&quot;, IF(NOT(Enrolled__c),IncentiveProject__r.ApprovedGrossRevenueBudget__c,ApprovedRevenueBudgetatSnapshot__c), 0)
 + GrossRevenueScopeChange__c + GrossRevenueAdjustment__c),(CASE(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, IncentiveProject__r.ApprovedGrossRevenueBudget__c, &quot;Time &amp; Material&quot;,  ApprovedRevenueBudgetatSnapshot__c , 0)
 + GrossRevenueScopeChange__c + GrossRevenueAdjustment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineMarginCalculated__c</fullName>
        <description>value is calculated in trigger and then used in BaselineGMofNSR field</description>
        <label>Baseline Margin % Calculated</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineMarginofNSRatSnapshot__c</fullName>
        <label>Baseline Margin % of NSR at Snapshot</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineNMofNSRVariance__c</fullName>
        <formula>BaselineNMofNSR__c - BaselineMarginofNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline NM% of NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineNMofNSR__c</fullName>
        <formula>CASE(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, 
  (IncentiveProject__r.ApprovedNetMarginBudget__c + GrossMarginAmountAdjustment__c) / (IncentiveProject__r.ApprovedNSRBudget__c + NSRAdjustment__c),

&quot;Time &amp; Material&quot;, (ApprovedNetMarginBudgetatSnapshot__c + GrossMarginAmountAdjustment__c) / (ApprovedNSRBudgetatSnapshot__c + NSRAdjustment__c)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Baseline NM% will move if Budgeted NM% moves (and therefore Threshold NM% and Threshold NM$ will move as well)</inlineHelpText>
        <label>Baseline NM % of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineNMofNSRatSnapshot__c</fullName>
        <label>Baseline NM% of NSR at Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>